Revision history for Catalyst-View-ByCode

0.09    2010-03-27
        * updated test requirements
        
0.08    2010-03-27
        * eliminated trunk/ directory
        * moved to Module::Install
        * fixed a test that failed on Windows because path separator
          was hard coded and wrong for this platform
        
0.07    2010-03-13
        * docs added, first CPAN upload

0.06    2010-03-01
        * changed version to 0.06
        * updated META.yml, MANIFEST
        * added some docs
        
        2010-03-02
        * added test for mixedCase and combined_name attribute keys
        * fixed doc typos, expanded docs
        * added logic to expand and shrink class names instead of setting them
          class 'abc';  # sets a class name, is now: 'abc'
          class '+xxx'; # adds class names,  is now: 'abc xyz'
          class '-xxx'; # removes things,    is now: 'abc'
          class 'uuu';  # set a name         is now: 'uuu'
          class '+a selected'                is now: 'a selected uuu'
          class '-a' 'uuu'                   is now: 'selected'
          class '-selected +hui foo'         is now: 'foo hui'
        
        2010-03-09
        * íntroduced stringification in Document for tag-content objects
        * used OUT/RAW/STDOUT in Renderer to avoid 'possible typo' warnings
        
0.05    2010-02-23
        * fixed a bug that made certain multiline prototype-like attributes fail
        * added a test to verify that
        * allow to use special attribute-names like
          div(dataTarget => 'x')       becomes <div data-target="x">
          div(data_target => 'x')      becomes <div data-target="x">
          div(style => {zIndex => 9})  becomes <div style="z-index:9">

        2010-03-01
        * found a way to correctly export and Devel::Declare'able
          all defined block()s into importing namespaces
          the mechanics behind this is dark magic overwriting import()

0.04    2009-08-12