@@ -1,5 +1,5 @@
 #
-# before fixing this block fails getting attr() values
+# before fixing these blocks failed getting attr() values
 #
 block block1 => sub {
     my $id = attr('id');
@@ -9,8 +9,8 @@ block block1 => sub {
     
     my $is_ok = 0;
     
-    if (defined($id) && !ref($id) && $id eq 'stupid' &&
-        defined($class) && !ref($class) && $class eq 'bad' &&
+    if (defined($id) && !ref($id) && $id eq 'stupid1' &&
+        defined($class) && !ref($class) && $class eq 'bad1' &&
         defined($xxx) && !ref($xxx) && $xxx == 42 &&
         !defined($unknown)) {
         # everything as we expect...
@@ -31,9 +31,9 @@ block 'block2', sub {
     
     my $is_ok = 0;
     
-    if (defined($id) && !ref($id) && $id eq 'stupid' &&
-        defined($class) && !ref($class) && $class eq 'bad' &&
-        defined($xxx) && !ref($xxx) && $xxx == 42 &&
+    if (defined($id) && !ref($id) && $id eq 'stupid2' &&
+        defined($class) && !ref($class) && $class eq 'bad2' &&
+        defined($xxx) && !ref($xxx) && $xxx == 43 &&
         !defined($unknown)) {
         # everything as we expect...
         $is_ok = 1;
@@ -57,9 +57,9 @@ block block3 {
     
     my $is_ok = 0;
     
-    if (defined($id) && !ref($id) && $id eq 'stupid' &&
-        defined($class) && !ref($class) && $class eq 'bad' &&
-        defined($xxx) && !ref($xxx) && $xxx == 42 &&
+    if (defined($id) && !ref($id) && $id eq 'stupid3' &&
+        defined($class) && !ref($class) && $class eq 'bad3' &&
+        defined($xxx) && !ref($xxx) && $xxx == 44 &&
         !defined($unknown)) {
         # everything as we expect...
         $is_ok = 1;
@@ -73,13 +73,13 @@ block block3 {
 
 template {
     b { 'block1:' };
-    block1 stupid.bad(xxx => 42) { '-1-' };
+    block1 stupid1.bad1(xxx => 42) { '-1-' };
     
     b { 'block2:' };
-    block2 stupid.bad(xxx => 42) { '-2-' };
+    block2 stupid2.bad2(xxx => 43) { '-2-' };
     
     b { 'block3:' };
-    block3 stupid.bad(xxx => 42) { '-3-' };
+    block3 stupid3.bad3(xxx => 44) { '-3-' };
     
     b { 'after blocks' };
 };
