@@ -1,0 +1,5 @@
+template {
+    body {
+        yield;
+    };
+};
